Fixed spacing issues and CV

--- a/css/home_style.css
+++ b/css/home_style.css
@@ -245,7 +245,7 @@ a.more {
     margin-top: 5%;
     justify-content: space-around;
   }
-  
+
 }
 
 /* REST -------------------- */
@@ -380,15 +380,15 @@ a.more {
   }
 
   .horizontal img {
-    margin: 0 0 0 0;
+    margin: 0 -4px 0 0;
   }
 
   .horizontal2 img {
-    margin: 0 -168px 0 0;
+    margin: 0 -170px 0 0;
   }
 
   .square2 img {
-    margin: 0 -41px 0 0;
+    margin: 0 -42px 0 0;
   }
 }
 
@@ -432,5 +432,5 @@ a.more {
     border: solid 5px #f32735;
     -webkit-mask: none;
   }
-  
+
 }
